start designing bask-sight

--- a/back-sight/layout/menus.html
+++ b/back-sight/layout/menus.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="css/menu/dock/dock.css" />
   <link rel="stylesheet" type="text/css" href="css/menu/sidebar/sidebar.css" />
   <link rel="stylesheet" type="text/css" href="css/menu/scaffy-menu/scaffy-menu.css" />
+  <link rel="stylesheet" type="text/css" href="css/blue-menu/blue_menu.css" />
   <style type="text/css">
     #dock-menu {
       width: 650px;
@@ -28,7 +29,9 @@
       width: 550px;
       float: left;
     }
-    
+    #blue-menu {
+      float: left;
+    }
   </style>
 </head>
 <body>
@@ -133,6 +136,20 @@
     </ul>
   </div>
   
+  <div style="clear: both;"></div>
+  
+  <div id="blue-menu">
+    <div id="menubody">
+      <ul id="menulist">
+        <li><a href="#">Position 1</a></li>
+        <li><a href="#">Position 2</a></li>
+        <li><a href="#">Position 3</a></li>
+        <li><a href="#">Position 5</a></li>
+        <li><a href="#">Position 4</a></li>
+      </ul>
+    </div>
+    <div id="menubottom"></div>
+  </div>
 
 </body>
 </html>
